# xcoding

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  activity.ts  config.ts  i18n.ts  layout.ts  review.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
crates/xcoding-agent/: Cargo.toml
crates/xcoding-agent/src/: lib.rs
crates/xcoding-context/: Cargo.toml
crates/xcoding-context/src/: lib.rs
crates/xcoding-core/: Cargo.toml
crates/xcoding-core/src/: lib.rs
crates/xcoding-mcp/: Cargo.toml
crates/xcoding-mcp/src/: lib.rs
crates/xcoding-policy/: Cargo.toml
crates/xcoding-policy/src/: lib.rs
crates/xcoding-protocol/: Cargo.toml
crates/xcoding-protocol/src/: lib.rs
crates/xcoding-providers/: Cargo.toml
crates/xcoding-providers/src/: lib.rs
crates/xcoding-server/: Cargo.toml
crates/xcoding-server/src/: main.rs
crates/xcoding-store/: Cargo.toml
crates/xcoding-store/src/: lib.rs
crates/xcoding-tools/: Cargo.toml
crates/xcoding-tools/src/: lib.rs
docs/: README.md  desktop.md  phase-0.md
docs/en/: README.md  architecture.md  getting-started.md  protocol.md  roadmap.md  session-safety.md
docs/zh/: README.md  architecture.md  desktop.md  getting-started.md  protocol.md  roadmap.md  session-safety.md
scripts/: package-desktop-portable.ps1  xcoding.ps1
tests/acceptance/: README.md  run.mjs
tests/e2e/: README.md  auto-edit-mode.mjs  command-allowlist.mjs  command-policy.mjs  custom-command-allowlist.mjs  desktop-activity.mjs  desktop-config.mjs  desktop-layout.mjs  desktop-review.mjs  doctor.mjs  git-fetch-pull-agent.mjs  git-push-agent.mjs  git-tools-agent.mjs  git-write-agent.mjs  guarded-write-agent.mjs  mcp-agent.mjs  patch-conflict-agent.mjs  provider-auth-error.mjs  provider-status.mjs  read-only-agent.mjs  retrieval-context.mjs  running-cancel-agent.mjs  session-continue.mjs  session-replay-agent.mjs  skills-agent.mjs  surface-parity.mjs  task-summary.mjs  write-loop-agent.mjs
tests/e2e/fixtures/mcp-agent/: README.md  mock-mcp-server.mjs
tests/e2e/fixtures/mcp-agent/.xcoding/: mcp.json
tests/e2e/fixtures/read-only-agent/: AGENTS.md
tests/e2e/fixtures/read-only-agent/src/: auth.ts
tests/e2e/fixtures/skills-agent/: README.md
tests/e2e/fixtures/skills-agent/.xcoding/skills/hello-style/: SKILL.md
tests/e2e/fixtures/write-loop-agent/: package.json
tests/e2e/fixtures/write-loop-agent/src/: calc.mjs
tests/e2e/fixtures/write-loop-agent/tests/: bugfix.test.mjs  feature.test.mjs  refactor.test.mjs
