[workspace]
resolver = "2"
exclude = ["apps/desktop/src-tauri"]
members = [
  "crates/xcoding-agent",
  "crates/xcoding-context",
  "crates/xcoding-core",
  "crates/xcoding-policy",
  "crates/xcoding-protocol",
  "crates/xcoding-providers",
  "crates/xcoding-server",
  "crates/xcoding-store",
  "crates/xcoding-tools",
  "crates/xcoding-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["XCoding Contributors"]
repository = "https://github.com/shanewoog/xcoding"

[workspace.dependencies]
async-stream = "0.3"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
