[package]
name = "xcoding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
xcoding-context = { path = "../xcoding-context" }
xcoding-core = { path = "../xcoding-core" }
xcoding-protocol = { path = "../xcoding-protocol" }
xcoding-providers = { path = "../xcoding-providers" }
xcoding-policy = { path = "../xcoding-policy" }
xcoding-mcp = { path = "../xcoding-mcp" }
xcoding-tools = { path = "../xcoding-tools" }