[package]
name = "xcoding-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
xcoding-protocol = { path = "../xcoding-protocol" }
xcoding-store = { path = "../xcoding-store" }
