[package]
name = "xcoding-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
xcoding-core = { path = "../xcoding-core" }
xcoding-protocol = { path = "../xcoding-protocol" }
xcoding-providers = { path = "../xcoding-providers" }
