[package]
name = "xcoding-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
xcoding-agent = { path = "../xcoding-agent" }
xcoding-core = { path = "../xcoding-core" }
xcoding-protocol = { path = "../xcoding-protocol" }
