[package]
name = "xcoding-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
xcoding-policy = { path = "../xcoding-policy" }
xcoding-protocol = { path = "../xcoding-protocol" }
