[package]
name = "xcoding-desktop"
version = "0.1.0"
description = "XCoding Desktop shell"
authors = ["XCoding Contributors"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["serde", "v4"] }
xcoding-agent = { path = "../../../crates/xcoding-agent" }
xcoding-core = { path = "../../../crates/xcoding-core" }
xcoding-protocol = { path = "../../../crates/xcoding-protocol" }
