[package]
name = "xcoding-desktop"
version = "0.1.0"
description = "XCoding Desktop shell"
authors = ["XCoding Contributors"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["serde", "v4"] }
xcoding-agent = { path = "../../../crates/xcoding-agent" }
xcoding-core = { path = "../../../crates/xcoding-core" }
xcoding-protocol = { path = "../../../crates/xcoding-protocol" }
xcoding-providers = { path = "../../../crates/xcoding-providers" }

[features]
# Prefer production embedding by default. `tauri dev` disables this and uses devUrl.
default = ["custom-protocol"]
# Production / portable builds must enable this so the UI loads embedded assets
# instead of http://localhost:1420 (dev server).
custom-protocol = ["tauri/custom-protocol"]
